# hi_all

./: .gitignore  README.md
backend/: .env  README.md  alembic.ini  auth.py  chat.db  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db  test_reply.py  test_ws_handler.py
backend/alembic/: env.py
backend/alembic/versions/: 19e1a127a414_add_unique_constraint_to_user.py  1b3c0fde43f1_videocall_table_added_to_track_calls.py  2c4f6a7b9e2e_add_last_message_to_groups.py  2cba98e19f12_add_reply_to_id_to_messages.py  3f166f0a27fa_update_groups_table.py  46ec990736d2_add_explicit_msg_persist_fields.py  659c1d7ed5aa_add_online_status_to_user.py  d4ef3d035b3a_update_groups_table_added_created_at.py  eaaf9123261b_remove_redundant_unique_from_email.py  f0fd3d2671f4_update_groups_table.py  f5a92263eb44_create_table.py
backend/app/: main.py
backend/app/account/: dependency.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/app/chat/: connectionService.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/app/db/: config.py  models.py
backend/app/tracking/: config.py  services.py
backend/tests/: test_main.py  test_phone.py  test_reply.py  test_ws_handler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
frontend/src/: App.jsx  (+2 more)
sql_scripts/: 001_create_users_table.sql  002_create_refresh_tokens_table.sql  003_create_groups_table.sql  004_create_group_members_table.sql  005_create_conversations_table.sql  006_create_messages_table.sql  007_create_video_calls_table.sql
(+27 files in other folders)
